Fixed writing archive dates; increased archive spacing

--- a/scss/_archive.scss
+++ b/scss/_archive.scss
@@ -1,5 +1,5 @@
 $spacing-between-columns: size(-1);
-$spacing-between-rows: size(6);
+$spacing-between-rows: size(8);
 
 .archive {
   @include flexbox;
